--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <script>document.getElementsByTagName("html")[0].className += " js";</script>
+    <link rel="icon", href="src/images/musical-notes-symbols.svg">
 </head>
 <body class="is-boxed has-animations">
     <div class="body-wrap boxed-container">
