--- a/registro.html
+++ b/registro.html
@@ -166,14 +166,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="container">
 					<div class="features-inner section-inner has-bottom-divider">
 						<h2 class="section-title mt-0">Crear Usuario:</h2>
-						<form id="myForm" method="POST" action="...">
+						<form id="registro1" method="POST" action="index.html">
 							<label>Usuario:</label>
         					<input type="text" required name="username" id="username"/>
         					<label>Contraseña:</label>
         					<input type="password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" placeholder="Mínimo: 6 caracteres, 1 número, 1 Mayúscula" name="pasword" id="pasword"/>
         					<label>Confirmar Contraseña:</label>
         					<input type="password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" placeholder="Repetir contraseña" name="password_confirm" id="password_confirm"/>
-        					<input type="submit" name="Enviar">
+        					<input type="submit" name="Enviar" style="background-color: rgb(82, 188, 148); border-radius: 5px; border:none; color:#fff; font-weight: 700;" form="registro1">
         					</form>
                     </div>
                 </div>
