--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test Segment CX Team</title>
-    <link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Playfair+Display:700" rel="stylesheet">
+    <link href="//db.onlinewebfonts.com/c/4bad449c3c5c04d6a405ea6b80986aa0?family=Soho+Gothic+Pro" rel="stylesheet" type="text/css"/>
+    <!--<link href="https://fonts.googleapis.com/css?family=Heebo:400,500,700|Playfair+Display:700" rel="stylesheet">-->
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <script>document.getElementsByTagName("html")[0].className += " js";</script>
